docs(studio): update docs with studio alpha 4 release

--- a/docs/content/docs/9.studio/2.setup.md
+++ b/docs/content/docs/9.studio/2.setup.md
@@ -9,8 +9,7 @@ seo:
 ---
 
 ::note{to="https://nuxt.studio/docs/setup"}
-This documentation covers only the new open-source Nuxt Studio module.
-Click here to view the documentation for the legacy standalone platform.
+This documentation covers only the new open-source Nuxt Studio module. Click here to view the documentation for the legacy standalone platform.
 ::
 
 ## Installation
@@ -29,7 +28,9 @@ Start your development server and start editing your Nuxt Content website.
 
 When running locally, **any file changes will be synchronized in real time with your local filesystem**.
 
+::note
 The publish system is only available in production mode. Use your current workflow (git command, IDE, GitHub Desktop...) to commit your changes.
+::
 
 ## Production mode
 
@@ -57,7 +58,7 @@ Read more about all the available options.
 
 ### OAuth Configuration
 
-To enable this Nuxt Studio supports authentication through both GitHub and GitLab OAuth providers allowing you to log in and publish updates from production.
+Nuxt Studio supports authentication through GitHub, GitLab and Google OAuth providers allowing you to log in and publish updates from production.
 
 ::tip{icon="i-lucide-info" to="/docs/studio/providers#oauth-providers"}
 Follow the setup instructions for your Git provider.
@@ -74,6 +75,18 @@ STUDIO_GITHUB_CLIENT_SECRET=<your_github_client_secret>
 ```bash [GitLab]
 STUDIO_GITLAB_APPLICATION_ID=<your_gitlab_application_id>
 STUDIO_GITLAB_APPLICATION_SECRET=<your_gitlab_secret>
+```
+
+```bash [Google]
+STUDIO_GOOGLE_CLIENT_ID=<your_google_client_id>
+STUDIO_GOOGLE_CLIENT_SECRET=<your_google_client_secret>
+STUDIO_GOOGLE_MODERATORS=admin@example.com,editor@example.com
+
+# Required to publish on GitHub
+STUDIO_GITHUB_TOKEN=<pat_token>
+
+# Required to publish on GitLab
+STUDIO_GITLAB_TOKEN=<pat_token>
 ```
 ::
 
@@ -108,10 +121,6 @@ Once deployed, open Studio by navigating to your configured route (default: `/_s
 
 ::tip
 You can also use the shortcut `CMD` + `.` to redirect to the Studio route.
-::
-
-::note
-OAuth-based login with **Google** will be available soon.
 ::
 
 ## Options
