--- a/docs/content/docs/9.studio/6.roadmap.md
+++ b/docs/content/docs/9.studio/6.roadmap.md
@@ -20,135 +20,78 @@ This roadmap is subject to change based on community feedback and evolving prior
 v1.0.0-alpha - Current Release
 ::
 
-The alpha release focuses on core functionality and stability. We're using Monaco editor to ensure all file operations and GitHub work before introducing the visual editor.
+The alpha release focuses on core functionality and stability. The alpha now includes both the Monaco code editor and the TipTap visual editor, providing a complete editing experience for Markdown content with MDC component support.
 
 ## Release Phases
 
-### ✅ Phase 1 - Alpha (Completed)
+### ✅ Phase 1 - Alpha (Current)
 
 **Focus**: Core infrastructure, file operations, and GitHub integration
 
 ::prose-steps{level="4"}
-#### Monaco Code Editor
+#### Content Editors
 
-Professional code editor for enhanced Markdown with MDC syntax, YAML, and JSON files.
-
-**Features:**
-
-- Syntax highlighting for Markdown, YAML, JSON
-- MDC syntax support
-- Split-screen diff viewer for conflicts
-- Auto-save functionality
-
-**Status:** ✅ Completed
+Professional editing experience with both code and visual modes.
 
 #### File Operations
 
 Complete CRUD operations for content files in the `content/` directory.
 
-**Features:**
-
-- Create new files and folders
-- Edit existing files
-- Delete files and folders
-- Rename and move files
-- Draft management with status tracking
-
-**Status:** ✅ Completed
-
 #### Media Management
 
 Centralized media library for assets in the `public/` directory.
-
-**Features:**
-
-- Upload images, videos, audio files
-- Organize media in folders
-- Preview media files
-- Delete and rename media
-- Copy media URLs and intergrate in Markdown
-
-**Status:** ✅ Completed
 
 #### Git Integration
 
 Direct commits to GitHub with full version control.
 
-**Features:**
-
-- GitHub OAuth integration
-- Commit changes via GitHub API
-- Conflict detection
-- Author attribution
-- Commit message customization
-
-**Status:** ✅ Completed
-
 #### Real-time Preview
 
 Live preview of changes on your production website.
-
-**Status:** ✅ Completed
 
 #### Internationalization (i18n)
 
 Multi-language support for the Studio interface.
 
-**Status:** ✅ Completed
-
 #### GitLab Integration
 
 Support for GitLab as a git provider alongside GitHub.
 
-**Status:** ✅ Completed
-
 #### Development Mode
 
 Local development support without authentication.
-::
-
-### 🚧 Phase 2 - Beta (In Development)
-
-**Focus**: Visual editing experience and enhanced authentication
-
-**Target Release**: Q4 2025
-
-The beta phase introduces the open source version of the visual editor, making Studio accessible to non-technical users.
-
-::prose-steps{level="4"}
-#### Visual Editor
-
-Notion-inspired WYSIWYG editor for Markdown content.
-
-**Status:** 🚧 In Development
-
-#### Frontmatter Edition as Form
-
-Nuxt Content collections schema-based forms for editing frontmatter in Markdown files.
-
-**Status:** 🚧 Planned
-
-#### `YAML`and `JSON` Edition as Form
-
-Nuxt Content collections schema-based forms for `json` and `yaml` files.
-
-**Status:** 🚧 Planned
-
-#### Vue Component Edition
-
-Visual interface for editing Vue component props and slots.
-
-**Status:** 🚧 Planned
 
 #### Google OAuth Authentication
 
 Alternative authentication method for non-GitHub users.
+::
+
+### 🚧 Phase 2 - Beta (Coming Soon)
+
+**Focus**: Enhanced form-based editing and advanced component management
+
+**Target Release**: Q4 2025
+
+The beta phase will introduce form-based editors for frontmatter, YAML, and JSON files, along with enhanced component editing capabilities.
+
+::prose-steps{level="4"}
+#### Frontmatter Form Editor
+
+Schema-based forms for editing frontmatter in Markdown files.
 
 **Status:** 🚧 Planned
 
-  :::prose-warning
-  Google-authenticated users will require at least one personal GitHub token to commit.
-  :::
+#### YAML and JSON Form Editors
+
+Schema-based forms for `YAML` and `JSON` files.
+
+**Status:** 🚧 Planned
+
+#### Vue Component Props Editor
+
+Visual interface for editing Vue component properties.
+
+**Status:** 🚧 Planned
 ::
 
 ### 🔮 Phase 3 - Stable Release
