refactor: standardize `Number.parseInt` usage and clarify OAuth provider documentation.

--- a/docs/content/docs/8.advanced/9.private.md
+++ b/docs/content/docs/8.advanced/9.private.md
@@ -33,7 +33,6 @@ When `encryption.enabled = false` (default):
 
 - Raw `.sql` or `.txt` dumps are emitted and directly fetched by the client (plain-text behavior).
 
-
 ## API endpoints
 
 Nuxt Content automatically provides endpoints for both **encrypted** and **unencrypted** modes.
@@ -112,7 +111,7 @@ node -e "console.log(require('crypto').randomBytes(32).toString('base64'))"
 
 You must protect the **key endpoint** and the `__nuxt_content` so only authenticated users receive decryption keys and content:
 
-```
+```ts
 // server/middleware/content-auth.ts
 import { defineEventHandler, createError, getRequestURL } from 'h3'
 
@@ -221,7 +220,7 @@ This design uses HKDF (HMAC-based Key Derivation Function) to ensure strong sepa
 
 ## Summary
 
-* Encrypted dumps are **safe static artifacts**.
-* API endpoints provide either the encrypted blob or a short-lived key.
-* Middleware is required to control who can fetch keys.
-* Clients transparently decrypt and hydrate, preserving v3’s offline & fast querying benefits.
+- Encrypted dumps are **safe static artifacts**.
+- API endpoints provide either the encrypted blob or a short-lived key.
+- Middleware is required to control who can fetch keys.
+- Clients transparently decrypt and hydrate, preserving v3’s offline & fast querying benefits.
