--- a/docs/content/docs/9.studio/3.providers.md
+++ b/docs/content/docs/9.studio/3.providers.md
@@ -39,7 +39,7 @@ To use GitHub as your authentication provider, you need to create a GitHub OAuth
 
 Go to [GitHub Developer Settings](https://github.com/settings/developers) and click **New OAuth App**
 
-#### Configure the OAuth Application
+#### Configure the GitHub OAuth Application
 
 Fill in the required fields:
 
@@ -51,14 +51,14 @@ Fill in the required fields:
   If you want to try studio locally, add your local url as redirect URI: `http://localhost:3000/__nuxt_studio/auth/gitlab`
   :::
 
-#### Copy Your Credentials
+#### Copy Your GitHub Credentials
 
 After creating the OAuth app, you'll receive:
 
 - A **Client ID** (visible immediately)
 - A **Client Secret** (click **Generate a new client secret**)
 
-#### Set your environment Variables
+#### Set your GitHub environment Variables
 
 Add the GitHub OAuth credentials to your deployment platform's environment variables or in your `.env` file in local
 
@@ -79,7 +79,7 @@ To use GitLab as your authentication provider, you need to create a GitLab OAuth
 
 Go to your GitLab [User Settings → Applications](https://gitlab.com/-/user_settings/applications) (or your group/organization settings) and create a **New Application**.
 
-#### Configure the OAuth Application
+#### Configure the GitLab OAuth Application
 
 Fill in the required fields:
 
@@ -91,14 +91,14 @@ Fill in the required fields:
   If you want to try studio locally, add your local url as redirect URI: `http://localhost:3000/__nuxt_studio/auth/gitlab`
   :::
 
-#### Copy Your Credentials
+#### Copy Your GitLab Credentials
 
 After creating the OAuth application, you'll receive:
 
 - An **Application ID** (visible immediately)
 - A **Secret** (visible immediately)
 
-#### Set your environment Variables
+#### Set your GitLab environment Variables
 
 Add the GitLab OAuth credentials to your deployment platform's environment variables or in your `.env` file in local
 
@@ -172,7 +172,7 @@ After creating the OAuth client, you'll receive:
   Google OAuth is used for authentication only. The Git Personal Access Token (`STUDIO_GITHUB_TOKEN` or `STUDIO_GITLAB_TOKEN`) is required to push changes to your repository.
   :::
 
-#### Set your environment Variables
+#### Set your Google environment Variables
 
 Add the **Google OAuth credentials** and the **Personal Access Token** for your Git provider to your deployment platform's environment variables or in your `.env` file locally. Do not forget to also whitelist users allowed to connect with Google with the `STUDIO_GITHUB_MODERATORS` variable.
 
