feat(search): add minHeading/maxHeading options to queryCollectionSearchSections

--- a/docs/content/docs/4.utils/4.query-collection-search-sections.md
+++ b/docs/content/docs/4.utils/4.query-collection-search-sections.md
@@ -23,7 +23,7 @@ The `queryCollectionSearchSections` utility is available in both Vue and Nitro. 
 ## Type
 
 ```ts
-function queryCollectionSearchSections(collection: keyof Collections, opts?: { ignoredTags: string[] }): ChainablePromise<T, Section[]>
+function queryCollectionSearchSections(collection: keyof Collections, opts?: { ignoredTags?: string[], minHeading?: string, maxHeading?: string }): ChainablePromise<T, Section[]>
 
 interface ChainablePromise<T extends keyof PageCollections, R> extends Promise<R> {
   where(field: keyof PageCollections[T] | string, operator: SQLOperator, value?: unknown): ChainablePromise<T, R>
@@ -43,6 +43,8 @@ Generate searchable sections from the specified collection.
   - `collection`: The key of the defined collection in `content.config.ts`.
   - `options`: (Optional) An object with the following properties:
     - `ignoredTags`: An array of tag names to ignore when generating sections. Default is an empty array.
+    - `minHeading`: Minimum heading level to split on (e.g., `'h2'`). Default is `'h1'`.
+    - `maxHeading`: Maximum heading level to split on (e.g., `'h3'`). Default is `'h6'`.
 - Returns: A Promise that resolves to an array of searchable sections. Each section is an object with the following properties:
   - `id`: A unique identifier for the section.
   - `title`: The title of the section (usually the heading text).
@@ -58,7 +60,9 @@ Here's an example of how to use `queryCollectionSearchSections` to create search
 <script>
 const { data: surround } = await useAsyncData('foo-surround', () => {
   return queryCollectionSearchSections('docs', {
-    ignoredTags: ['code']
+    ignoredTags: ['code'],
+    minHeading: 'h2',
+    maxHeading: 'h3',
   })
 })
 </script>
