docs(studio): beta release

--- a/docs/content/docs/9.studio/6.roadmap.md
+++ b/docs/content/docs/9.studio/6.roadmap.md
@@ -14,24 +14,28 @@ This roadmap outlines the development phases of the self-hosted Nuxt Studio modu
 This roadmap is subject to change based on community feedback and evolving priorities. Join the conversation on [GitHub Discussions](https://github.com/nuxt-content/studio/discussions) or [join the Discord](https://discord.gg/sBXDm6e8SP) to help shape the future of Nuxt Studio.
 ::
 
-## Current Status: Alpha Release
+## Current Status: Beta Release
 
 ::badge
-v1.0.0-alpha - Current Release
+v1.0.0-beta - Current Release
 ::
 
-The alpha release focuses on core functionality and stability. The alpha now includes both the Monaco code editor and the TipTap visual editor, providing a complete editing experience for Markdown content with MDC component support.
+The beta release focuses on core functionality and stability. The beta now includes the TipTap visual editor (default), the Monaco code editor, and the new form-based editor for YAML/JSON files and frontmatter, providing a complete editing experience for all content types with MDC component support.
 
 ## Release Phases
 
-### ✅ Phase 1 - Alpha (Current)
+### ✅ Phase 1 - Alpha
 
 **Focus**: Core infrastructure, file operations, and GitHub integration
 
 ::prose-steps{level="4"}
 #### Content Editors
 
-Professional editing experience with both code and visual modes.
+Professional editing experience with TipTap visual editor (default), Monaco code editor, and form-based editor.
+
+#### Form-based Editor
+
+Schema-based forms for editing frontmatter in Markdown files, YAML, and JSON files.
 
 #### File Operations
 
@@ -39,7 +43,7 @@ Complete CRUD operations for content files in the `content/` directory.
 
 #### Media Management
 
-Centralized media library for assets in the `public/` directory.
+Centralized media library for assets in the `public/` directory with AVIF support.
 
 #### Git Integration
 
@@ -51,7 +55,7 @@ Live preview of changes on your production website.
 
 #### Internationalization (i18n)
 
-Multi-language support for the Studio interface.
+Multi-language support for the Studio interface (16 languages: AR, BG, DE, EN, ES, FA, FI, FR, ID, IT, JA, NL, PL, PT-BR, UA, ZH).
 
 #### GitLab Integration
 
@@ -66,32 +70,24 @@ Local development support without authentication.
 Alternative authentication method for non-GitHub users.
 ::
 
-### 🚧 Phase 2 - Beta (Coming Soon)
+### 🚧 Phase 2 - Beta :badge[Current]
 
-**Focus**: Enhanced form-based editing and advanced component management
+**Focus**: Advanced component management
 
-**Target Release**: Q4 2025
-
-The beta phase will introduce form-based editors for frontmatter, YAML, and JSON files, along with enhanced component editing capabilities.
+The beta phase will introduce enhanced component editing capabilities.
 
 ::prose-steps{level="4"}
-#### Frontmatter Form Editor
-
-Schema-based forms for editing frontmatter in Markdown files.
-
-**Status:** 🚧 Planned
-
-#### YAML and JSON Form Editors
-
-Schema-based forms for `YAML` and `JSON` files.
-
-**Status:** 🚧 Planned
-
 #### Vue Component Props Editor
 
 Visual interface for editing Vue component properties.
 
-**Status:** 🚧 Planned
+**Status:** 🚧 In development
+
+#### Custom Oauth
+
+Provide utilities to allow users to handle their own authentication.
+
+**Status:** 🚧 In development
 ::
 
 ### 🔮 Phase 3 - Stable Release
@@ -104,7 +100,7 @@ The stable release will include performance optimizations and production ready f
 
 ### 🌟 Phase 4 - Advanced Features (Future)
 
-**Focus**: AI integration, multiple git providers and community based features.
+**Focus**: AI integration, collections view and community based features.
 
 **Target Release**: 2026
 
