--- a/docs/content/docs/9.studio/4.content.md
+++ b/docs/content/docs/9.studio/4.content.md
@@ -9,28 +9,29 @@ seo:
 ---
 
 ::note
-**Alpha Release - TipTap Visual Editor Now Available!**
+**Beta Release - All Editors Now Available!**
 
 :br
 
-The alpha version now includes both the **Monaco code editor** and the **TipTap visual editor** for Markdown files. You can switch between them at any time using the editor mode toggle in the toolbar.
+The beta version now includes the **TipTap visual editor** (default), the **Monaco code editor**, and the new **Form-based editor** for YAML/JSON files and frontmatter. You can switch between them at any time using the editor mode toggle in the toolbar.
 ::
 
 Nuxt Studio offers a versatile workspace for both developers and content writers, giving them the freedom to choose between our different editors:
 
-- [Notion-like editor](#notion-like-editor-markdown-files){target="_blank"} for `Markdown` files
-- [Form editor](#form-editor){target="_blank"} for `YAML` and `JSON` files
-- [Code editor](#code-editor){target="_blank"} for any kind of files (for technical users only)
-  Each editor serves its own purpose. Some users prefer visual editing, while others prefer direct code manipulation. At the end, **Markdown and MDC syntax is the final output** for both editors, with seamless conversion between visual and code modes.
+- [Notion-like editor](#notion-like-editor-markdown-files) for `Markdown` files
+- [Form editor](#form-editor) for `YAML` and `JSON` files
+- [Code editor](#code-editor) for any kind of files (for technical users only)
+
+Each editor serves its own purpose. Some users prefer visual editing, while others prefer direct code manipulation. At the end, **Markdown and MDC syntax is the final output** for both editors, with seamless conversion between visual and code modes.
 
 ## Editor Mode Switching
 
-You can switch between the visual editor and code editor at any time by clicking the **actions dropdown** in the toolbar:
+You can switch between the visual editor and code editor at any time by clicking the **actions dropdown** in the file header (on the right of the breadcrumb):
 
-- **Visual Mode** (TipTap) - Notion-like editing experience
+- **Visual Mode** - Notion-like editing experience for Markdown and Form editor for YAML/JSON files. 
 - **Code Mode** (Monaco) - Direct Markdown/MDC syntax editing
 
-Your preference is saved and will be used for all Markdown files.
+Your preference is saved and will be used for all files.
 
 ## TipTap Visual Editor (`Markdown` files)
 
@@ -41,34 +42,18 @@ The TipTap visual editor provides a modern Notion-like editing experience for Ma
 - **Rich Text Editing** - Format text with headings, bold, italic, strikethrough, code, links, and more
 - **MDC Component Support** - Insert and edit custom Vue components directly in the visual editor
 - **Media Integration** - Browse in media picker to insert images from your library
+- **Emoji Integration** - Type `:` followed by an emoji name to insert emojis, or use the slash command `/emoji`
 - **Slash Commands** - Type `/` to access a menu of formatting options and components
 - **Drag & Drop** - Reorder content blocks by dragging them
 - **Link Editor** - Floating popover for editing links with external link support
 - **Toolbar** - Bubble toolbar appears when you select text, providing quick access to formatting options
 - **Real-time Conversion** - Seamlessly converts between visual content and MDC/Markdown syntax
 
-### Debug Mode
-
-Enable **debug mode** from the footer menu to see the real-time conversion between:
-
-- TipTap JSON format
-- MDC AST
-- Final Markdown output
-
-This is useful for understanding how content is transformed and to share troubleshooting.
-
-## Code Editor
-
-The Monaco code editor provides full control over your content, allowing you to write raw content directly:
-
-- MDC syntax for [Markdown](/docs/files/markdown){target="_blank"} files
-- [JSON](/docs/files/json){target="_blank"} or [YAML](/docs/files/yaml){target="_blank"} syntax
-
-## Working with Vue Components
+### Working with Vue Components
 
 One of the TipTap visual editor's standout features is its ability to integrate and edit custom Vue components directly within the editor interface.
 
-### Create and Integrate Custom Components
+#### Create and Integrate Custom Components
 
 Developers can create visually complex components, and editors can use them without technical knowledge. The visual editor handles component integration seamlessly.
 
@@ -106,7 +91,7 @@ defineProps({
 
 #### Use in Markdown with MDC syntax
 
-Components can be integrated using [MDC syntax](/docs/files/markdown#mdc-syntax){target="_blank"}:
+Components can be integrated using [MDC syntax](/docs/files/markdown#mdc-syntax):
 
 ```mdc [content/index.md]
 ::home-feature
@@ -130,7 +115,7 @@ All components in the `/components/content` folder are automatically available:
 4. Props editing with visual interface coming in beta
 ::
 
-### Integrate External Library Components
+#### Integrate External Library Components
 
 By default, components from external libraries (like Nuxt UI) won't appear in Studio's component list. To make them available, set them as global in your Nuxt config:
 
@@ -146,23 +131,25 @@ export default defineNuxtConfig({
 })
 ```
 
-## Form Editor (Coming in Beta)
+### Debug Mode
 
-::warning
-**Coming in Beta**
+Enable **debug mode** from the footer menu to see the real-time conversion between:
 
-:br
+- TipTap JSON format
+- MDC AST
+- Final Markdown output
 
-The form editor for frontmatter, YAML, and JSON files is currently under development and will be available in the beta release.
-::
+This is useful for understanding how content is transformed and to share troubleshooting.
 
-The form editor will be used for editing:
+## Form Editor
+
+The form editor is used for editing:
 
 - **Frontmatter** in `Markdown` files
 - **YAML** files
 - **JSON** files
 
-It will eliminate the need to interact directly with complex file syntax. Instead, forms will be automatically generated based on your [collection schema](/docs/collections/define){target="_blank"} definition.
+It eliminates the need to interact directly with complex file syntax. Instead, forms are automatically generated based on your [collection schema](/docs/collections/define) definition.
 
 ### **Defining your form with** `zod` Schema
 
@@ -215,16 +202,16 @@ export default defineContentConfig({
 Primitive Zod types are automatically mapped to appropriate form inputs in:
 
 - **String** → Text input
-- **Date** → Date picker
-- **Number** → Number input (counter)
-- **Boolean** → Toggle switch
-- **Enum** → Select dropdown
+- **Date** → Date picker :badge[Coming Soon]
+- **Number** → Number input :badge[Coming Soon]
+- **Boolean** → Toggle switch :badge[Coming Soon]
+- **Enum** → Select dropdown :badge[Coming Soon]
 - **Arrays of strings** → List of badge inputs
 - **Arrays of objects** → Accordion of items with embedded form
 
 :video{autoplay controls loop poster="https://res.cloudinary.com/nuxt/video/upload/v1740679550/arrayobjectandstring_r1jpvz.jpg" src="https://res.cloudinary.com/nuxt/video/upload/v1740679550/arrayobjectandstring_r1jpvz.mp4"}
 
-### Custom Inputs Mapping
+### Custom Inputs Mapping :badge[Coming Soon]
 
 Studio goes beyond primitive types. You can customise form fields using the `editor` method, which extends Zod types with metadata to empower editor interface.
 
@@ -257,3 +244,9 @@ This option can be set to avoid the display of a field in the Studio editor.
 ::prose-tip
 Studio inputs are fully extensible. We can create as many input as we want based on our users needs.
 ::
+
+## Code Editor
+
+The Monaco code editor provides full control over your content, allowing you to write raw content directly:
+
+MDC syntax for `Markdown` files or  `JSON` or `YAML` syntax for others.
