--- a/docs/content/docs/9.studio/2.setup.md
+++ b/docs/content/docs/9.studio/2.setup.md
@@ -26,6 +26,8 @@ Start your development server and start editing your Nuxt Content website.
 
 ## Development mode
 
+Previous section is enough to be able to edit your content. Just click on the floating button on the bottom left of your page. 
+
 When running locally, **any file changes will be synchronized in real time with your local filesystem**.
 
 ::note
