docs: add customization option for GitLab instance URL

--- a/docs/content/docs/9.studio/3.providers.md
+++ b/docs/content/docs/9.studio/3.providers.md
@@ -108,6 +108,19 @@ STUDIO_GITLAB_CLIENT_SECRET=<your_gitlab_secret>
 # Optional: Comma-separated list of authorized email addresses for additional access control
 # STUDIO_GITLAB_MODERATORS=admin@example.com,editor@example.com
 ```
+
+You can customize the gitlab instance url using the `auth.gitlab.instanceUrl` option:
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  studio: {
+    auth: {
+      gitlab: {
+        instanceUrl: 'https://gitlab.com' // default: 'https://gitlab.com'
+      }
+    }
+  }
+})
+```
 ::
 
 ### Google
