--- a/examples/i18n/package.json
+++ b/examples/i18n/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@nuxt/content": "latest",
     "@nuxt/ui": "^4.2.1",
-    "@nuxthub/core": "npm:@nuxthub/core-nightly@0.10.0-20251128-232930-0579c39",
+    "@nuxthub/core": "^0.10.2",
     "@nuxtjs/i18n": "^10.2.1",
-    "nuxt": "^4.2.1"
+    "nuxt": "^4.2.2"
   }
 }
