docs(studio): separation of concerns between git/auth providers

--- a/docs/content/docs/9.studio/2.setup.md
+++ b/docs/content/docs/9.studio/2.setup.md
@@ -36,60 +36,41 @@ The publish system is only available in production mode. Use your current workfl
 
 ## Production mode
 
-While Nuxt Studio can be useful during development (especially with the upcoming Studio editor) its main advantage is the ability to publish changes directly from your production website.
+Studio's main advantage is publishing content changes directly from your production website. This requires two configurations:
 
-In order to publish changes in production, you need to configure the git repository:
+### 1. Git Provider
+
+Configure where your content is stored and where changes will be committed:
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
   studio: {
-    // Git repository configuration (owner and repo are required)
     repository: {
       provider: 'github', // 'github' or 'gitlab'
-      owner: 'your-username', // your GitHub/GitLab username or organization
-      repo: 'your-repo', // your repository name
-      branch: 'main', // the branch to commit to (default: 'main')
+      owner: 'your-username',
+      repo: 'your-repo',
+      branch: 'main'
     }
   }
 })
 ```
 
-::callout{to="#options"}
-Read more about all the available options.
+::tip{to="/docs/studio/git-providers"}
+Learn more about GitHub and GitLab providers.
 ::
 
-### OAuth Configuration
+### 2. Auth Provider
 
-Nuxt Studio supports authentication through GitHub, GitLab and Google OAuth providers allowing you to log in and publish updates from production.
+Configure how users authenticate to access Studio. Choose from GitHub, GitLab, Google OAuth, or custom authentication:
 
-::tip{icon="i-lucide-info" to="/docs/studio/providers#oauth-providers"}
-Follow the setup instructions for your Git provider.
-::
-
-Once your OAuth app is setup, you should have your environment variables set in your hosting provider.
-
-::code-group
-```bash [GitHub]
-STUDIO_GITHUB_CLIENT_ID=<your_github_client_id>
-STUDIO_GITHUB_CLIENT_SECRET=<your_github_client_secret>
+```bash [.env]
+# Example with GitHub OAuth
+STUDIO_GITHUB_CLIENT_ID=<your_client_id>
+STUDIO_GITHUB_CLIENT_SECRET=<your_client_secret>
 ```
 
-```bash [GitLab]
-STUDIO_GITLAB_APPLICATION_ID=<your_gitlab_application_id>
-STUDIO_GITLAB_APPLICATION_SECRET=<your_gitlab_secret>
-```
-
-```bash [Google]
-STUDIO_GOOGLE_CLIENT_ID=<your_google_client_id>
-STUDIO_GOOGLE_CLIENT_SECRET=<your_google_client_secret>
-STUDIO_GOOGLE_MODERATORS=admin@example.com,editor@example.com
-
-# Required to publish on GitHub
-STUDIO_GITHUB_TOKEN=<pat_token>
-
-# Required to publish on GitLab
-STUDIO_GITLAB_TOKEN=<pat_token>
-```
+::tip{to="/docs/studio/auth-providers"}
+Follow the complete setup instructions for your auth provider.
 ::
 
 ### Deployment
@@ -195,8 +176,21 @@ export default defineNuxtConfig({
 Nuxt Studio includes built-in internationalization support with the following languages available:
 
 - 🇬🇧 **English** (default)
-- 🇫🇷 **French**
+- 🇸🇦 **Arabic**
+- 🇧🇬 **Bulgarian**
 - 🇩🇪 **German**
+- 🇪🇸 **Spanish**
+- 🇮🇷 **Farsi**
+- 🇫🇮 **Finnish**
+- 🇫🇷 **French**
+- 🇮🇩 **Indonesian**
+- 🇮🇹 **Italian**
+- 🇯🇵 **Japanese**
+- 🇳🇱 **Dutch**
+- 🇵🇱 **Polish**
+- 🇧🇷 **Portuguese (Brazil)**
+- 🇺🇦 **Ukrainian**
+- 🇨🇳 **Chinese**
 
 Set your preferred language using the `i18n` option:
 
@@ -222,7 +216,7 @@ Community contributions for new language translations are welcome! If you'd like
 
 ### Dev mode
 
-If you want to use test locally your production setup, disable the `dev` option:
+If you want to test your production setup locally, disable the `dev` option:
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
@@ -232,4 +226,4 @@ export default defineNuxtConfig({
 })
 ```
 
-Make sure to create another GitHub/GitLab OAuth app that redirects to your local dev server (usually <http://localhost:3000>).
+Make sure to configure your OAuth provider to redirect to your local dev server (usually <http://localhost:3000>).
