--- a/docs/content/docs/9.studio/1.introduction.md
+++ b/docs/content/docs/9.studio/1.introduction.md
@@ -1,25 +1,18 @@
 ---
 title: Introduction
 description: Learn what the new Nuxt Studio module is and how it differs from the previous hosted platform.
-navigation:
-  title: Introduction
 seo:
   title: Learn about the Nuxt Studio Open Source Module
   description: Nuxt Studio has evolved into an open-source Nuxt module that you can self-host alongside your Nuxt Content website.
+navigation:
+  title: Introduction
 ---
 
 ## The new Nuxt Studio module
 
 When NuxtLabs joined Vercel, the team promised to release [nuxt.studio](https://nuxt.studio) as a free open-source, self-hosted module for Nuxt projects.
 
-::u-button
----
-color: neutral
-icon: i-simple-icons-github
-target: _blank
-to: https://github.com/nuxt-content/studio
-variant: subtle
----
+::u-button{to="https://github.com/nuxt-content/studio" icon="i-simple-icons-github" target="_blank" color="neutral" variant="subtle"}
 Discover the Nuxt Studio module on GitHub.
 ::
 
@@ -27,12 +20,7 @@ That promise is now fulfilled. Thanks to vercel support the first version of the
 
 You can now enable **content editing directly in production**, with real-time preview and GitHub integration, all from within your own Nuxt application.
 
-::u-button
----
-color: neutral
-icon: i-lucide-mouse-pointer-click
-to: /admin?redirect=/docs/studio/introduction
----
+::u-button{to="/admin?redirect=/docs/studio/introduction" icon="i-lucide-mouse-pointer-click" external color="neutral"}
 Try editing this page
 ::
 
