--- a/docs/content/docs/3.files/4.csv.md
+++ b/docs/content/docs/3.files/4.csv.md
@@ -3,7 +3,13 @@ title: CSV
 description: How to define, write and query CSV data.
 ---
 
-## Define Collection
+## Single-file source
+
+When you point a collection to a single CSV file (instead of a glob), Nuxt Content **treats each data row as a separate item** in the collection.
+
+- **Define the collection**: set `source` to the path of a single `.csv` file.
+- **Item generation**: each data row becomes an item with the row’s fields at the top level (no `body` array).
+- **IDs**: item IDs are suffixed with `#<rowNumber>`, where `#1` is the first data row after the header.
 
 ```ts [content.config.ts]
 import { defineCollection, defineContentConfig } from '@nuxt/content'
@@ -11,13 +17,66 @@ import { z } from 'zod'
 
 export default defineContentConfig({
   collections: {
-    authors: defineCollection({
+    people: defineCollection({
       type: 'data',
-      source: 'authors/**.csv',
+      source: 'org/people.csv',
       schema: z.object({
         name: z.string(),
-        email: z.string(),
-        avatar: z.string()
+        email: z.string().email()
+      })
+    })
+  }
+})
+```
+
+```csv [content/org/people.csv]
+name,email
+Alice,alice@example.com
+Bob,bob@example.com
+```
+
+Each row produces its own item. For example, the first data row will have an ID ending with `#1` and the second with `#2`. You can query by any column:
+
+```ts
+const { data: alice } = await useAsyncData('alice', () =>
+  queryCollection('people')
+    .where('email', '=', 'alice@example.com')
+    .first()
+)
+
+const { data: allPeople } = await useAsyncData('all-people', () =>
+  queryCollection('people')
+    .order('name', 'ASC')
+    .all()
+)
+```
+
+::note
+- The header row is required and is not turned into an item.
+- With a single-file source, items contain row fields at the top level (no `body`).
+- If you prefer treating each CSV file as a single item containing all rows in `body`, use a glob source like `org/**.csv` instead of a single file.
+:::
+
+## Multiple-files source
+
+If you uses `*/**.csv` as source in configuration, Nuxt Content will treat them differently from single-file collections.  
+**Each file(not row) will be treated as an item**, rows will be parsed into `body` field in item object as an array.
+
+```ts [content.config.ts]
+import { defineCollection, defineContentConfig } from '@nuxt/content'
+import { z } from 'zod'
+
+export default defineContentConfig({
+  collections: {
+    charts: defineCollection({
+      type: 'data',
+      source: 'charts/**.csv',
+      schema: z.object({
+        // Body is important in CSV files, without body field you cannot access to data array
+        body: z.array(z.object({
+          label: z.string(),
+          value: z.number()
+        }))
       })
     })
   }
@@ -25,22 +84,21 @@ export default defineContentConfig({
 
 ```
 
-## Create `.csv` files
-
-Create author files in `content/authors/` directory.
+Create chart files in `content/charts/` directory.
 
 ::code-group
-```csv [users.csv]
-id,name,email
-1,John Doe,john@example.com
-2,Jane Smith,jane@example.com
-3,Alice Johnson,alice@example.com
+```csv [content/charts/chart1.csv]
+label,value
+A,100
+B,200
+C,300
 ```
 
-```csv [team.csv]
-name,role,avatar
-John Doe,Developer,https://avatars.githubusercontent.com/u/1?v=4
-Jane Smith,Designer,https://avatars.githubusercontent.com/u/2?v=4
+```csv [content/charts/chart2.csv]
+label,value
+Foo,123
+Bar,456
+Baz,789
 ```
 ::
 
@@ -48,31 +106,33 @@ Jane Smith,Designer,https://avatars.githubusercontent.com/u/2?v=4
 Each CSV file should have a header row that defines the column names, which will be used as object keys when parsed.
 ::
 
-## Query Data
-
-Now we can query authors:
+Now we can query charts:
 
 ```vue
 <script lang="ts" setup>
-// Find a single author
-const { data: author } = await useAsyncData('john-doe', () => {
-  return queryCollection('authors')
-    .where('name', '=', 'John Doe')
+// Find a single chart
+const { data: chart1 } = await useAsyncData('chart1', () => {
+  return queryCollection('charts')
+    .where('id', '=', 'charts/charts/chart1.csv')
     .first()
 })
 
-// Get all authors
-const { data: authors } = await useAsyncData('authors', () => {
-  return queryCollection('authors')
-    .order('name', 'ASC')
+// Get all charts
+const { data: charts } = await useAsyncData('charts', () => {
+  return queryCollection('charts')
+    .order('id', 'ASC')
     .all()
 })
+
 </script>
 
 <template>
   <ul>
-    <li v-for="author in authors" :key="author.id">
-      {{ author.name }} ({{ author.email }})
+    <li v-for="chart in charts" :key="chart.id">
+      <!-- CSV data are in `chart.body` as an array -->
+      <p v-for="data in chart.body">
+        {{ data.label }} - {{ data.value }}
+      </p>
     </li>
   </ul>
 </template>
