docs: update setup

--- a/docs/content/docs/9.studio/2.setup.md
+++ b/docs/content/docs/9.studio/2.setup.md
@@ -38,7 +38,8 @@ The publish system is only available in production mode. Use your current workfl
 
 Studio's main advantage is publishing content changes directly from your production website. This requires two configurations:
 
-### 1. Git Provider
+::steps
+### Git Provider
 
 Configure where your content is stored and where changes will be committed:
 
@@ -55,11 +56,11 @@ export default defineNuxtConfig({
 })
 ```
 
-::tip{to="/docs/studio/git-providers"}
-Learn more about GitHub and GitLab providers.
-::
+  :::tip{to="/docs/studio/git-providers"}
+  Learn more about GitHub and GitLab providers.
+  :::
 
-### 2. Auth Provider
+### Auth Provider
 
 Configure how users authenticate to access Studio. Choose from GitHub, GitLab, Google OAuth, or custom authentication:
 
@@ -69,9 +70,9 @@ STUDIO_GITHUB_CLIENT_ID=<your_client_id>
 STUDIO_GITHUB_CLIENT_SECRET=<your_client_secret>
 ```
 
-::tip{to="/docs/studio/auth-providers"}
-Follow the complete setup instructions for your auth provider.
-::
+  :::tip{to="/docs/studio/auth-providers"}
+  Follow the complete setup instructions for your auth provider.
+  :::
 
 ### Deployment
 
@@ -102,8 +103,9 @@ Once deployed, open Studio by navigating to your configured route (default: `/_s
 2. Authorize the OAuth application
 3. You'll be redirected back to Studio ready to edit your content
 
-::tip
-You can also use the shortcut `CMD` + `.` to redirect to the Studio route.
+  :::tip
+  You can also use the shortcut `CMD` + `.` to redirect to the Studio route.
+  :::
 ::
 
 ## Options
