docs(studio): add Korean to i18n supported languages list
Add Korean to the list of supported languages in Studio i18n documentation

--- a/docs/content/docs/9.studio/2.setup.md
+++ b/docs/content/docs/9.studio/2.setup.md
@@ -193,6 +193,7 @@ Nuxt Studio includes built-in internationalization support with the following la
 - 🇧🇷 **Portuguese (Brazil)**
 - 🇺🇦 **Ukrainian**
 - 🇨🇳 **Chinese**
+- 🇰🇷 **Korean**
 
 Set your preferred language using the `i18n` option:
 
