fix(docs): remove extra `.` in getting started page

--- a/docs/content/docs/1.getting-started/1.index.md
+++ b/docs/content/docs/1.getting-started/1.index.md
@@ -42,7 +42,7 @@ The new collections system provides automatic TypeScript types for all your data
 
 ### Nuxt Studio Integration :badge[Soon]{color="neutral"}
 
-[Nuxt Studio](/docs/studio/setup) and v3 are designed to complement each other perfectly.. The [studio module](https://github.com/nuxt-content/studio) is creating an ideal environment where developers can focus on code while team members manage content through an intuitive interface.
+[Nuxt Studio](/docs/studio/setup) and v3 are designed to complement each other perfectly. The [studio module](https://github.com/nuxt-content/studio) is creating an ideal environment where developers can focus on code while team members manage content through an intuitive interface.
 
 ---
 
